--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,21 @@
     <string name="app_name">Team-7-TCSS-450</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    <!-- Primary SignIn Page -->
     <string name="email_label">Email</string>
     <string name="password_label">Password</string>
     <string name="sign_in_button">Sign In</string>
     <string name="register_button">Register</string>
+
+    <!-- Primary Register Page -->
+    <string name="hint_first_name_label">First Name</string>
+    <string name="hint_last_name_label">Last Name</string>
+    <string name="hint_email_label">Email</string>
+    <string name="hint_user_name_label">User Name</string>
+    <string name="hint_password_label">Password</string>
+    <string name="hint_password_verify_label">Verify Password</string>
+
+
 </resources>
