--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,25 @@
 <resources>
+    <!-- Other strings -->
     <string name="app_name">Team-7-TCSS-450</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- SignIn Fragment strings -->
     <string name="email_label">Email</string>
     <string name="password_label">Password</string>
     <string name="sign_in_button">Sign In</string>
     <string name="register_button">Register</string>
+
+    <!-- Registration Fragment strings -->
     <string name="first_name_hint">First Name</string>
     <string name="last_name_hint">Last Name</string>
     <string name="email_hint">Email</string>
     <string name="password_hint">Password</string>
     <string name="password_again_hint">Retype Password</string>
+
+    <!-- Strings used for fragments for navigation -->
+    <string name="title_home">Home</string>
+    <string name="title_weather">Weather</string>
+    <string name="title_messages">Messages</string>
+    <string name="title_account">Account</string>
+    <string name="title_activity_account_fragment">AccountFragment</string>
+
 </resources>
