--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="title_weather">Weather</string>
     <string name="title_messages">Messages</string>
     <string name="title_account">Account</string>
+    <string name="title_contacts">Contacts</string>
     <string name="title_activity_account_fragment">AccountFragment</string>
 
 </resources>
