--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,8 @@
     <string name="title_contacts">Contacts</string>
     <string name="title_activity_account_fragment">AccountFragment</string>
 
+    <!-- Strings used for connecting to web services -->
+    <string name="base_url_service">https://team7-tcss450-project-service.herokuapp.com/</string>
+    <string name="base_url_auth">https://team7-tcss450-project-auth.herokuapp.com/</string>
+
 </resources>
