--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,9 @@
     <string name="home_greeting">Welcome, %1$s!</string>
     <string name="title_weather">Weather</string>
     <string name="title_messages">Messages</string>
-    <string name="title_account">Account</string>
+    <string name="title_account">Contacts</string>
     <string name="title_activity_account_fragment">AccountFragment</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
