--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,5 +39,7 @@
     <string name="label_weather_wind">Wind</string>
     <string name="content_desc_weather_icon">Weather Icon</string>
     <string name="value_weather_with_units">%1$04.1f%2$s</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
