--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="password_label">Password</string>
     <string name="sign_in_button">Sign In</string>
     <string name="register_goto_registration">Register</string>
+    <string name="option_stay_signed_in">Stay Signed In</string>
 
     <!-- Registration Fragment strings -->
     <string name="first_name_hint">First Name</string>
