Partially implemented add new chat feature.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,5 +57,6 @@
     <string name="hint_text_message">Text Message</string>
     <string name="label_chat_rooms">Rooms</string>
     <string name="label_chat">Chat</string>
+    <string name="menu_label_add_chat">New Chat</string>
 
 </resources>
