--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,5 +58,9 @@
     <string name="label_chat_rooms">Rooms</string>
     <string name="label_chat">Chat</string>
     <string name="menu_label_add_chat">New Chat</string>
+    <string name="dialogue_title_add_chat">Create New Chat</string>
+    <string name="hint_chat_title">Chat Title</string>
+    <string name="button_cancel">Cancel</string>
+    <string name="button_confirm">Confirm</string>
 
 </resources>
