added [add contact] UI + server side (it works!)
- No user feedback whether contact invite was sent or rejected from any means

- Note: When a contact invite is sent, the receiver must accept invite before the new contact is shown in the contact list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,8 @@
 
     <!-- Strings used for contacts action bar -->
     <string name="action_invite_contact">Invite new contact</string>
+    <string name="dialogue_title_add_new_contact">Add New Contact</string>
+    <string name="hint_contact_email">Email Address</string>
 
     <!-- Strings used for chat feature -->
     <string name="content_desc_send_msg">Send Message</string>
