--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,7 +51,9 @@
     <string name="action_sign_out">Sign Out</string>
 
     <!-- Strings used for contacts action bar -->
-    <string name="action_invite_contact">Invite new contact</string>
+    <string name="action_invite_contact">Invite New Contact</string>
+    <string name="action_view_pending_contacts">Pending Invites</string>
+    <string name="action_view_sent_contacts">Sent Invites</string>
     <string name="dialogue_title_add_new_contact">Add New Contact</string>
     <string name="hint_contact_email">Email Address</string>
 
