--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,12 @@
     <string name="dialogue_title_add_new_contact">Add New Contact</string>
     <string name="hint_contact_email">Email Address</string>
 
+    <!-- Contact Information -->
+    <string name="label_fullname"></string>
+    <string name="label_username">User Name: %1$s</string>
+    <string name="label_email">Email: %1$s</string>
+    <string name="label_memberid">MemberID: %1$s</string>
+
     <!-- Strings used for chat feature -->
     <string name="content_desc_send_msg">Send Message</string>
     <string name="hint_text_message">Text Message</string>
